c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/sub_ptr_from_int.c
int main(void)
{
    int *x = 0;
    // you can't subtract a pointer from an integer
    // Note that 0 is NOT implicitly converted to a null pointer here
    return 0 - x == 0;
}